--- a/project.css
+++ b/project.css
@@ -147,6 +147,7 @@ p, .p {
 
 main {
     display: flex;
+    overflow: auto;
     
 }
 
@@ -154,7 +155,7 @@ main {
     /* margin-top:20px; */
     background-color: #FFF;
     display: block;
-    overflow: auto;
+    /* overflow: auto; */
     /* display: flex; */
     width: 80%; 
     margin-bottom: 3%;
@@ -168,19 +169,26 @@ main {
     width: 90%;
 }
 
-aside {
+#news {
     /* margin-top:20px; */
-    /* float: right; */
+    display: block;
     background-color: #FFF;
     width: 20%;
     border: 2px solid #eecab1;
     border-radius: 15px 0  0 15px;
     background-color: #eee8b1;
+    
 
 }
 
 aside p{
-    text-indent:2em;
+    /* text-indent:2em; */
+}
+
+aside a{
+    text-decoration: none;
+    color: #2983e3;
+    font-weight: 600;
 }
 
 form {
@@ -415,6 +423,19 @@ table td:hover {
 #traffic-intro img {
     height: 300px;
     width: 100%;
+}
+
+#activate {
+    font-size: 1em;
+    background-color: #508700;
+    text-align: center;
+    position: absolute;
+    top: 47%;
+    left: 41.4%;
+    border: none;
+    color: #FFF;
+    padding: 0 1em;
+    border-radius: 15px 15px 0px 0px;
 }
 
 aside h3 {
