--- a/project.css
+++ b/project.css
@@ -32,7 +32,7 @@ h2 {
 nav {
     background-color:  #2983e3;
     text-align: center;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     height: 10%;
     overflow: auto;
     /* min-height: 50px; */
@@ -129,6 +129,7 @@ p, .p {
 
 #wrapper {
     width: 90%;
+    max-width: 1280px;
     margin: auto;
     padding: 2% 2% 0 2%;
 }
@@ -416,6 +417,12 @@ table td:hover {
     overflow: auto;
 }
 
+#traffic-intro:hover {
+    box-shadow: 10px 10px;
+    transition: 2s;
+    
+}
+
 #traffic-intro h2 {
     text-align: center;
 }
@@ -429,9 +436,9 @@ table td:hover {
     font-size: 1em;
     background-color: #508700;
     text-align: center;
-    position: absolute;
-    top: 47%;
-    left: 41.4%;
+    position: relative;
+    top: -40px;
+    
     border: none;
     color: #FFF;
     padding: 0 1em;
@@ -513,6 +520,14 @@ table {
         background-color: #03a9f4;
         border-bottom: solid yellow 1px; 
     }
+
+    #news {
+        display: none;
+    }
+
+    /* main#main {
+        height: 2000px;
+    } */
 
     table {
         display: none;
